docs/grammar/ezlang.ebnf
program = { statement } EOF ;

statement = variable_decl
          | assignment
          | print_stmt
          | input_stmt
          | if_stmt
          | loop_stmt
          | function_def
          | function_call ;

variable_decl = "let" identifier "=" expression "." ;

assignment = "set" identifier "to" expression "." ;

print_stmt = "print" expression "." ;

input_stmt = "input" identifier "with" string "." ;

if_stmt = "when" condition "then"
            block
          [ "else"
            block ]
          "stop" "." ;

loop_stmt = "keep" "going" ":"
              block
            "until" condition "." ;

function_def = "define" "task" identifier
                 block
               "end" "task" "." ;

function_call = identifier "." ;

block = { statement } ;

condition = or_expr ;

or_expr = and_expr { "or" and_expr } ;

and_expr = not_expr { "and" not_expr } ;

not_expr = [ "not" ] comparison ;

comparison = expression comparator expression ;

comparator = ">" | "<" | "==" | ">=" | "<=" ;

expression = add_expr ;

(* '+' supports both numeric addition and string concatenation *)
add_expr = mul_expr { ("+" | "-") mul_expr } ;

(* 'mod' is used for modulo operations *)
mul_expr = unary_expr { ("*" | "/" | "mod") unary_expr } ;

(* negative numbers are supported *)
unary_expr = [ "-" ] primary ;

primary = number
        | string
        | identifier
        | list
        | "(" expression ")" ;

list = "[" [ expression { "," expression } ] "]" ;

identifier = letter { letter | digit | "_" } ;

number = digit { digit } ;

string = '"' { character } '"' ;

letter = "a" | "b" | "c" | "d" | "e" | "f" | "g"
       | "h" | "i" | "j" | "k" | "l" | "m" | "n"
       | "o" | "p" | "q" | "r" | "s" | "t" | "u"
       | "v" | "w" | "x" | "y" | "z"
       | "A" | "B" | "C" | "D" | "E" | "F" | "G"
       | "H" | "I" | "J" | "K" | "L" | "M" | "N"
       | "O" | "P" | "Q" | "R" | "S" | "T" | "U"
       | "V" | "W" | "X" | "Y" | "Z" ;

digit = "0" | "1" | "2" | "3" | "4"
      | "5" | "6" | "7" | "8" | "9" ;

character = ? any character except " ? ;

EOF = ? end of input ? ;
